--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ migrations/*.sql.backup
 # Arquivos de uploads (se implementado localmente)
 uploads/
 storage/
+*.uploaded
 
 # Arquivos de certificados SSL/TLS locais
 certs/
